// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`flipper snapshots Flipper: 0 1`] = `
<button
  aria-hidden={true}
  className="flipper-0-1-1 flipper__next-0-1-3"
  data-sketch-symbol="Flipper - default"
  href={null}
  tabIndex={-1}
>
  <span
    className="flipper_glyph-0-1-2"
  />
</button>
`;

exports[`flipper snapshots Flipper: 1 1`] = `
<button
  aria-hidden={true}
  className="flipper-0-1-5 flipper__previous-0-1-8"
  direction="previous"
  href={null}
  tabIndex={-1}
>
  <span
    className="flipper_glyph-0-1-6"
  />
</button>
`;

exports[`flipper snapshots Flipper: 2 1`] = `
<button
  aria-hidden={true}
  aria-label="See next"
  className="flipper-0-1-9 flipper__next-0-1-11"
  direction="next"
  href={null}
  tabIndex={-1}
  visible={true}
>
  <span
    className="flipper_glyph-0-1-10"
  />
</button>
`;

exports[`flipper snapshots Flipper: 3 1`] = `
<button
  aria-hidden={true}
  aria-label="See previous"
  className="flipper-0-1-13 flipper__previous-0-1-16"
  direction="previous"
  href={null}
  tabIndex={-1}
  visible={true}
>
  <span
    className="flipper_glyph-0-1-14"
  />
</button>
`;
